--- a/style.css
+++ b/style.css
@@ -1,243 +1,646 @@
 /* Reset */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 18px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 18px;
+  overflow-x: hidden;
 }
 
 /* Colors */
 :root {
-    --soft-red: hsl(7, 99%, 70%);
-    --yellow: hsl(51, 100%, 49%);
-    --dark-cyan: hsl(167, 40%, 24%);
-    --dark-blue: hsl(198, 62%, 26%);
-    --medium-cyan: hsl(168, 34%, 41%);
-    --very-dark-blue: hsl(212, 27%, 19%);
-    --very-grayish-blue: hsl(213, 9%, 39%);
-    --dark-grayish-blue: hsl(232, 10%, 55%);
-    --grayish-blue: hsl(210, 4%, 67%);
-    --white: hsl(0, 0%, 100%);
-    --black: hsl(0, 0%, 0%);
+  --soft-red: hsl(7, 99%, 70%);
+  --yellow: hsl(51, 100%, 49%);
+  --dark-cyan: hsl(167, 40%, 24%);
+  --dark-blue: hsl(198, 62%, 26%);
+  --medium-cyan: hsl(168, 34%, 41%);
+  --very-dark-blue: hsl(212, 27%, 19%);
+  --very-grayish-blue: hsl(213, 9%, 39%);
+  --dark-grayish-blue: hsl(232, 10%, 55%);
+  --grayish-blue: hsl(210, 4%, 67%);
+  --light-blue: #4cc9f0;
+  --gray: #fafafa;
+  --light-green: #9ad9ce;
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
 }
 
 /* Header */
 header {
-    width: 100%;
-    height: 550px;
-    background-image: url('./assets/desktop/image-header.jpg');
-    background-position: center;
-    background-size: cover;
+  width: 100%;
+  height: 550px;
+  background-image: url("./assets/desktop/image-header.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .container-menu {
-    width: 95%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 35px;
+  width: 95%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 35px;
+  overflow: hidden;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo img {
-    max-width: 150px;
-    width: 100%;
+  max-width: 150px;
+  width: 100%;
 }
 
 .menu-desktop ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  align-items: center;
+  list-style: none;
 }
 
 .menu-desktop li {
-    margin-right: 30px;
-    color: var(--white);
-    font-family: 'Barlow', sans-serif;
-    font-weight: 600;
-    padding: 10px;
-    cursor: pointer;
+  margin-right: 30px;
+  color: var(--white);
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .menu-desktop li:last-child {
-    background-color: var(--white);
-    padding: 10px;
-    color: var(--black);
-    border-radius: 19px;
+  background-color: var(--white);
+  padding: 10px;
+  color: var(--black);
+  border-radius: 19px;
 }
 
 .menu-desktop li:hover {
-    filter: brightness(0.9);
+  filter: brightness(0.9);
 }
 
 .menu-desktop li:last-child:hover {
-    background: rgba(255, 255, 255, 0.3);
-    color: var(--white);
+  background: rgba(255, 255, 255, 0.3);
+  color: var(--white);
+}
+
+.icon-menu-mobile {
+  display: none;
+}
+
+.menu-mobile {
+  display: none;
+}
+
+.menu-mobile ul {
+  display: none;
+}
+
+.menu-mobile li {
+  display: none;
 }
 
 .content-banner {
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 20px auto;
-    padding: 20px;
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px auto;
+  padding: 20px;
 }
 
 .content-banner .title-banner {
-    color: var(--white);
-    font-family: 'Fraunces', serif;
-    font-weight: 900;
-    font-size: 60px;
-    text-transform: uppercase;
-    letter-spacing: 0.5rem;
+  color: var(--white);
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  font-size: 60px;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
 }
 
 .content-banner .arrow-down {
-    margin-top: 40px;
-    animation-name: arrowDown;
-    animation-duration: 0.5s;
-    animation-iteration-count: infinite;
+  margin-top: 40px;
+  animation-name: arrowDown;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
 }
 
 section.gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-    height: 500px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100vw;
+  height: 1500px;
 }
 
 section.gallery .only-text {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    padding: 100px;
+  padding: 100px;
 }
 
 .only-text .title {
-    font-family: 'Fraunces', serif;
-    font-weight: 700;
-    font-size: 35px;
-    color: var(--very-dark-blue);
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 35px;
+  color: var(--very-dark-blue);
 }
 
 .only-text .description {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 500;
-    color: var(--dark-grayish-blue);
-    margin-top: 20px;
-    line-height: 27px;
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  color: var(--dark-grayish-blue);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 27px;
 }
 
 .only-text a {
-    margin-top: 30px;
-    text-decoration: none;
-    font-family: 'Fraunces';
-    font-weight: 700;
-    text-transform: uppercase;
-    color: var(--very-dark-blue);
+  margin-top: 30px;
+  text-decoration: none;
+  font-family: "Fraunces";
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--very-dark-blue);
 }
 
 .shadow-yellow {
-    max-width: 140px;
-    width: 100%;
-    height: 5px;
-    box-shadow: 3px 10px 10px var(--yellow);
-    border-radius: 16px;
-    margin-top: -15px;
-    margin-left: -14px;
+  max-width: 140px;
+  height: 5px;
+  box-shadow: 3px 10px 10px var(--yellow);
+  border-radius: 16px;
+  margin-top: -15px;
+  margin-left: -14px;
 }
 
 .shadow-soft-red {
-    max-width: 140px;
-    width: 100%;
-    height: 5px;
-    box-shadow: 3px 10px 10px var(--soft-red);
-    border-radius: 16px;
-    margin-top: -15px;
-    margin-left: -14px;
+  max-width: 140px;
+  width: 100%;
+  height: 5px;
+  box-shadow: 3px 10px 10px var(--soft-red);
+  border-radius: 16px;
+  margin-top: -15px;
+  margin-left: -14px;
 }
 
 section.gallery .only-image {
-    background-size: cover;
-    background-position: center;
+  background-size: cover;
+  background-position: center;
 }
 
 .image-transform {
-    background-image: url('./assets/desktop/image-transform.jpg');
+  background-image: url("./assets/desktop/image-transform.jpg");
 }
 
 .image-stand-out {
-    background-image: url('./assets/desktop/image-stand-out.jpg');
+  background-image: url("./assets/desktop/image-stand-out.jpg");
 }
 
-section.gallery .mixed{
+section.gallery .mixed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 100px;
+  padding-right: 100px;
+
+  padding-top: 200px;
+  background-size: cover;
+  background-position: center;
+}
+
+.mixed .title {
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  font-size: 35px;
+  margin-top: 40px;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.mixed .description {
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  margin-top: 20px;
+  line-height: 27px;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+}
+
+.cyan {
+  color: var(--medium-cyan);
+}
+
+.dark-blue {
+  color: var(--dark-blue);
+}
+
+.image-graphic-design {
+  background-image: url("./assets/desktop/image-graphic-design.jpg");
+}
+
+.image-photography {
+  background-image: url("./assets/desktop/image-photography.jpg");
+}
+
+.clients-testimonials {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 100px;
+  background: var(--gray);
+}
+
+.title-testimonials {
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  color: var(--grayish-blue);
+  margin-top: 20px;
+}
+
+.testimonials-cards {
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  margin-right: -200vw;
+  transition: all ease 0.2s;
+}
+
+.testimonial-card {
+  width: calc(100vw * 3);
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.testimonial-card img {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.testimonial-card .testimonial {
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  margin-top: 20px;
+  line-height: 27px;
+  text-align: center;
+  width: 400px;
+  color: var(--very-grayish-blue);
+  margin: 40px 0;
+}
+
+.testimonial-card .client-name {
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  color: var(--very-dark-blue);
+}
+
+.testimonial-card small {
+  font-family: "Barlow", sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--grayish-blue);
+  margin-top: 10px;
+}
+
+.bullets {
+  max-width: 200px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.bullet {
+  max-width: 15px;
+  width: 100%;
+  height: 15px;
+  border-radius: 50%;
+  border: 1px solid var(--grayish-blue);
+  margin-right: 15px;
+}
+
+.bullets .selected {
+  background-color: var(--grayish-blue);
+}
+
+.food-gallery {
+  width: 100vw;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.food-gallery .food {
+  height: inherit;
+  background-size: cover;
+  background-position: center;
+}
+
+.milk {
+  background-image: url("./assets/desktop/image-gallery-milkbottles.jpg");
+}
+
+.orange {
+  background-image: url("./assets/desktop/image-gallery-orange.jpg");
+}
+
+.cone {
+  background-image: url("./assets/desktop/image-gallery-cone.jpg");
+}
+
+.sugar-cubes {
+  background-image: url("./assets/desktop/image-gallery-sugarcubes.jpg");
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-green);
+  padding: 50px;
+}
+
+.content-media {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.content-media > img {
+  max-width: 170px;
+  width: 100%;
+}
+
+.menu-footer ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin: 20px 0;
+}
+
+.menu-footer li {
+  margin: 0 40px;
+  margin-top: 15px;
+  cursor: pointer;
+  font-family: "Barlow", sans-serif;
+  color: var(--dark-cyan);
+  font-weight: 500;
+}
+
+.social-media {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-media a {
+  display: flex;
+  text-decoration: none;
+  margin: 20px 15px;
+}
+
+/* Animation */
+@keyframes arrowDown {
+  0% {
+    margin-top: 40px;
+  }
+
+  50% {
+    margin-top: 25px;
+  }
+
+  100% {
+    margin-top: 40px;
+  }
+}
+
+/* Media queries responsiveness */
+@media (max-width: 770px) {
+  .menu-desktop li {
+    margin-right: 0;
+  }
+
+  .content-banner .title-banner {
+    font-size: 45px;
+  }
+
+  section.gallery .only-text {
+    padding: 60px;
+    display: block;
+  }
+  .only-text .title {
+    font-size: 27px;
+  }
+
+  .only-text .description {
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+
+  section.gallery .mixed {
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .mixed .title {
+    font-size: 30px;
+    margin-top: 206px;
+  }
+
+  .mixed .description {
+    max-width: 340px;
+  }
+
+  .food-gallery {
+    grid-template-columns: repeat(2, 1fr);
+    height: 950px;
+  }
+
+  .food-gallery .food {
+    height: auto;
+  }
+}
+
+@media (max-width: 440px) {
+  header {
+    background-image: url("./assets/mobile/image-header.jpg");
+  }
+
+  .container-menu {
+    width: 100%;
+  }
+
+  .content-banner .title-banner {
+    font-size: 35px;
+    text-align: center;
+    margin: 20px 0;
+    padding: 20px;
+  }
+
+  .menu-desktop {
+    display: none;
+  }
+
+  .menu-mobile {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .icon-menu-mobile {
+    display: block;
+    position: absolute;
+    right: 8%;
+    padding: 2%;
+  }
+
+  .menu-mobile ul {
+    width: 80vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-left: 100px;
-    padding-right: 100px;
-    
-    padding-top: 200px;
-    height: 520px;
-    background-size: cover;
-    background-position: center;
-}
+    height: 370px;
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    top: 90px;
+    background-color: var(--white);
+    list-style: none;
+    padding: 20px;
+  }
 
-.mixed .title {
-    font-family: 'Fraunces', serif;
-    font-weight: 900;
-    font-size: 35px;
-    margin-top: 40px;
-    text-transform: capitalize;
-    text-align: center;
-}
+  .menu-mobile li {
+    display: flex;
+    align-items: center;
+    color: var(--dark-grayish-blue);
+    font-family: "Barlow", sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 30px 0;
+    font-weight: 600;
+  }
 
-.mixed .description {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 500;
-    margin-top: 20px;
-    line-height: 27px;
-    text-align: center;
-    max-width: 400px;
-    width: 100%;
-}
-
-.cyan {
-    color: var(--medium-cyan);
-}
-
-.dark-blue {
+  .menu-mobile li:last-child {
+    background-color: var(--yellow);
+    padding: 15px;
     color: var(--dark-blue);
-}
+    text-transform: uppercase;
+    font-family: "Fraunces", serif;
+    font-weight: 700;
+    border-radius: 24px;
+    font-size: 17px;
+  }
 
-.image-graphic-design {
-    background-image: url('./assets/desktop/image-graphic-design.jpg');
-}
+  .menu-mobile li:last-child:focus {
+    color: var(--dark-blue);
+    background-color: transparent;
+    border: 1px solid var(--yellow);
+    border-radius: 24px;
+  }
 
-.image-photography {
-    background-image: url('./assets/desktop/image-photography.jpg');
-}
+  .ballon {
+    background: var(--light-blue);
+    padding: 20px;
+    position: absolute;
+    top: 50px;
+    right: 10%;
+  }
 
-/* Animação */
-@keyframes arrowDown {
-    0% {
-        margin-top: 40px;
-    }
+  .ballon::after {
+    content: "";
+    position: absolute;
+    border-top: 100px solid var(--white);
+    border-right: 33px solid var(--white);
+    top: -10px;
+    right: 0;
+    transform: rotate(45deg);
+  }
 
-    50% {
-        margin-top: 25px;
-    }
+  section.gallery {
+    grid-template-columns: 1fr;
+    height: auto;
+  }
 
-    100% {
-        margin-top: 40px;
-    }
+  section.gallery .only-image,
+  section.gallery .only-text {
+    height: 400px;
+  }
+
+  .only-text .title {
+    font-size: 24px;
+  }
+
+  .only-text .description {
+    font-size: 17px;
+  }
+
+  .only-text a {
+    font-size: 17px;
+  }
+
+  .image-transform {
+    background-image: url("./assets/mobile/image-transform.jpg");
+  }
+
+  .image-stand-out {
+    background-image: url("./assets/mobile/image-stand-out.jpg");
+  }
+
+  section.gallery .mixed {
+    padding: 20px;
+  }
+
+  .mixed .description {
+    margin-bottom: 15px;
+    padding: 0 3%;
+  }
+
+  .title-testimonials {
+    font-size: 18px;
+  }
+
+  .testimonial-card .testimonial {
+    width: 300px;
+    padding: 0 3%;
+  }
+
+  .food-gallery {
+    height: 362px;
+  }
+
+  footer {
+    padding: 35px;
+  }
+
+  .content-media > img {
+    max-width: 135px;
+  }
+
+  .menu-footer li {
+    margin: 0 20px;
+    font-size: 15px;
+  }
+
+  .social-media img {
+    width: 15px;
+  }
 }
