Refactoring CSS and setTimeout

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   --very-grayish-blue: hsl(213, 9%, 39%);
   --dark-grayish-blue: hsl(232, 10%, 55%);
   --grayish-blue: hsl(210, 4%, 67%);
-  --light-blue: #4cc9f0;
+  --light-blue: #53C0FF;
   --gray: #fafafa;
   --light-green: #9ad9ce;
   --white: hsl(0, 0%, 100%);
