--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ header {
   animation-iteration-count: infinite;
 }
 
+/* First Gallery */
+
 section.gallery {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -244,6 +246,7 @@ section.gallery .mixed {
   background-image: url("./assets/desktop/image-photography.jpg");
 }
 
+/* Clients Testimonials */
 .clients-testimonials {
   width: 100vw;
   display: flex;
@@ -338,6 +341,7 @@ section.gallery .mixed {
   background-color: var(--grayish-blue);
 }
 
+/* Second Gallery */
 .food-gallery {
   width: 100vw;
   height: 400px;
@@ -367,6 +371,7 @@ section.gallery .mixed {
   background-image: url("./assets/desktop/image-gallery-sugarcubes.jpg");
 }
 
+/* Footer */
 footer {
   display: flex;
   align-items: center;
